--- a/app/styles/utils/_layoututils.scss
+++ b/app/styles/utils/_layoututils.scss
@@ -4,6 +4,7 @@
 @import "_spacing";
 
 $font-size: 16px;
+$break-mobile: 450px;
 $break-tablet-s: 767px;
 $break-tablet-p: 960px;
 $break-tablet-l: 1184px;
